Added some new tests for JsronRPC.cpp. Removed some mem leaks , added msg only constructor for PluginError.h .

--- a/.cproject
+++ b/.cproject
@@ -145,6 +145,7 @@
 									<listOptionValue builtIn="false" value="/home/dnoack/libs/zeromq-4.0.5/include"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/include}&quot;"/>
 								</option>
+								<option id="gnu.cpp.compiler.option.other.other.557232989" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -Wno-write-strings" valueType="string"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.140906367" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1082539951" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug">
@@ -220,4 +221,5 @@
 			<resource resourceType="PROJECT" workspacePath="/Plugin-Server"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
