added ardvark_sl to ld path in makefile.

--- a/.cproject
+++ b/.cproject
@@ -175,6 +175,7 @@
 								</option>
 								<option id="gnu.cpp.link.option.paths.690693994" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
 									<listOptionValue builtIn="false" value="../cpputest/lib"/>
+									<listOptionValue builtIn="false" value="../aardvark_sl"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.112754320" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
@@ -279,6 +280,7 @@
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Uds"/>
 		<configuration configurationName="Debug">
 			<resource resourceType="PROJECT" workspacePath="/Plugin-Server"/>
 		</configuration>
