--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -12,7 +12,7 @@ environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.157011383/ap
 environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.157011383/appendContributed=true
 environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.411245810/CFLAGS/delimiter=\:
 environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.411245810/CFLAGS/operation=replace
-environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.411245810/CFLAGS/value=-I../include -I${HOME}/cpputest-3.6/lib/include/CppUTest -I${HOME}/cpputest-3.6/lib/include/CppUTestExt -I../cpputest/include/CppUTestExt -I../include/rapidjson
+environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.411245810/CFLAGS/value=
 environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.411245810/CXXFLAGS/delimiter=\:
 environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.411245810/CXXFLAGS/operation=append
 environment/project/cdt.managedbuild.config.gnu.exe.debug.721159017.411245810/CXXFLAGS/value=${CFLGAS}
